--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="bg-light">
     <div class="d-flex">
         <aside class="aside p-2 pt-0">
            <div class="position-sticky top-0 pt-2 aside-body">
@@ -70,12 +70,12 @@
         <div class="_backdrop fade"></div>
         <main class="main">
             <div class="container-fluid">
-                <nav class="row position-sticky top-0 bg-white" style="z-index: 1;">
+                <nav class="row position-sticky top-0 bg-light" style="z-index: 1;">
                     <div class="col">
-                        <div class="row justify-content-between align-items-center border p-2 mt-1 mx-2 rounded">
+                        <div class="row justify-content-between align-items-center border p-2 mt-1 mx-2 rounded bg-white">
                             <div class="col d-block d-lg-none">
                                 <div class="aside-control-btn">
-                                    <i class="fa fa-bars"></i>
+                                    <i class="fa fa-bars fs-2"></i>
                                 </div>
                             </div>
                             <div class="col text-center text-lg-start">
@@ -83,9 +83,9 @@
                             </div>
                             <div class="col text-end">
                                 <div class="">
-                                    <i class="fa fa-gears me-lg-3"></i>
+                                    <i class="fa fa-gears fs-4 me-lg-3"></i>
                                     <a href="" type="button" class="btn border-0 position-relative">
-                                        <i class="fa fa-bell"></i>
+                                        <i class="fa fa-bell fs-4"></i>
                                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                                             99+
                                             <span class="visually-hidden">unread messages</span>
@@ -103,11 +103,11 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center mb-3">
-                                            <i class="fa fa-user-circle text-primary fs-1"></i>
-                                            <span class="fs-5">+ 42% <i class="fa fa-arrow-alt-circle-up text-primary"></i></span>
+                                            <i class="fa fa-user-circle fa1 fs-1"></i>
+                                            <span class="fs-5 fa1">+ 42% <i class="fa fa-arrow-alt-circle-up fa1"></i></span>
                                         </div>
                                         <h1 class="fw-bold mb-0">100,000 M</h1>
-                                        <span>Visitor</span>
+                                        <span class="fa1">Visitor</span>
                                     </div>
                                 </div>
                             </div>
@@ -115,11 +115,11 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center mb-3">
-                                            <i class="fa fa-user-circle text-primary fs-1"></i>
-                                            <span class="fs-5">+ 42% <i class="fa fa-arrow-alt-circle-up text-primary"></i></span>
+                                            <i class="fa fa-user-circle fa2 fs-1"></i>
+                                            <span class="fs-5 fa2">+ 42% <i class="fa fa-arrow-alt-circle-up fa2"></i></span>
                                         </div>
                                         <h1 class="fw-bold mb-0">100,000 M</h1>
-                                        <span>Visitor</span>
+                                        <span class="fa2">Visitor</span>
                                     </div>
                                 </div>
                             </div>
@@ -127,11 +127,11 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center mb-3">
-                                            <i class="fa fa-user-circle text-primary fs-1"></i>
-                                            <span class="fs-5">+ 42% <i class="fa fa-arrow-alt-circle-up text-primary"></i></span>
+                                            <i class="fa fa-user-circle fa3 fs-1"></i>
+                                            <span class="fs-5 fa3">+ 42% <i class="fa fa-arrow-alt-circle-up fa3"></i></span>
                                         </div>
                                         <h1 class="fw-bold mb-0">100,000 M</h1>
-                                        <span>Visitor</span>
+                                        <span class="fa3">Visitor</span>
                                     </div>
                                 </div>
                             </div>
@@ -139,11 +139,11 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center mb-3">
-                                            <i class="fa fa-user-circle text-primary fs-1"></i>
-                                            <span class="fs-5">+ 42% <i class="fa fa-arrow-alt-circle-up text-primary"></i></span>
+                                            <i class="fa fa-user-circle fa4 fs-1"></i>
+                                            <span class="fs-5 fa4">+ 42% <i class="fa fa-arrow-alt-circle-up fa4"></i></span>
                                         </div>
                                         <h1 class="fw-bold mb-0">100,000 M</h1>
-                                        <span>Visitor</span>
+                                        <span class="fa4">Visitor</span>
                                     </div>
                                 </div>
                             </div>
@@ -156,38 +156,38 @@
                                 <h6 class="">Total</h6>
                                 <h5 class="fw-bold mb-4">$ 166.88k</h5>
                                 <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-pen user-icon border border-primary rounded d-flex justify-content-center align-items-center fs-4 text-primary"></i>
+                                    <i class="fa fa-pen pen1 user-icon d-flex justify-content-center align-items-center fs-4"></i>
                                     <div class="w-100 ms-3">
                                         <div class="d-flex justify-content-between">
                                             <h6>Item</h6>
                                             <h6>$ 20,000 k</h6>
                                         </div>
                                         <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 10px">
-                                            <div class="progress-bar" style="width: 25%"></div>
+                                            <div class="progress-bar bar1" style="width: 25%"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-pen user-icon border border-primary rounded d-flex justify-content-center align-items-center fs-4 text-primary"></i>
+                                    <i class="fa fa-pen pen2 user-icon d-flex justify-content-center align-items-center fs-4"></i>
                                     <div class="w-100 ms-3">
                                         <div class="d-flex justify-content-between">
                                             <h6>Item</h6>
                                             <h6>$ 20,000 k</h6>
                                         </div>
                                         <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 10px">
-                                            <div class="progress-bar" style="width: 50%"></div>
+                                            <div class="progress-bar bar2" style="width: 50%"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center">
-                                    <i class="fa fa-pen user-icon border border-primary rounded d-flex justify-content-center align-items-center fs-4 text-primary"></i>
+                                    <i class="fa fa-pen pen3 user-icon d-flex justify-content-center align-items-center fs-4"></i>
                                     <div class="w-100 ms-3">
                                         <div class="d-flex justify-content-between">
                                             <h6>Item</h6>
                                             <h6>$ 20,000 k</h6>
                                         </div>
-                                        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 10px">
-                                            <div class="progress-bar" style="width: 75%"></div>
+                                        <div class="progress" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="height: 10px;">
+                                            <div class="progress-bar bar3" style="width: 75%"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mx-1 mt-3">
+                <div class="row mx-1 my-3">
                     <div class="col-lg-8 mb-3 mb-lg-0">
                         <div class="card">
                             <div class="card-body">
