--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         </div>
                         <h5 class="">Web Development Engineer</h5>
                     </div>
-                    <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded">
+                    <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="fa fa-search pe-2"></i>
-                        <input type="text" class="form-control border border-0" placeholder="Search...">
+                        <input type="text" class="form-control border border-0 bg-white" placeholder="Search..." disabled>
                     </div>
                     <div class="mt-3">
                         <div class="list-group list-group-flush">
@@ -714,6 +714,28 @@
                 </div>
             </div>
         </main>
+<!-- Button trigger modal -->
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded">
+                <i class="fa fa-search pe-2"></i>
+                <input type="text" class="form-control border border-0" placeholder="Search...">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
