--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="fa fa-search pe-2"></i>
-                        <input type="text" class="form-control border border-0 bg-white" placeholder="Search..." disabled>
+                        <input type="text" class="form-control border border-0 bg-white" placeholder="Search...">
                     </div>
                     <div class="mt-3">
                         <div class="list-group list-group-flush">
@@ -83,7 +83,7 @@
                             </div>
                             <div class="col text-end">
                                 <div class="">
-                                    <i class="fa fa-gears fs-4 me-lg-3"></i>
+                                    <i class="fa fa-gears fs-4 me-lg-3" data-bs-toggle="modal" data-bs-target="#userModal"></i>
                                     <a href="" type="button" class="btn border-0 position-relative">
                                         <i class="fa fa-bell fs-4"></i>
                                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
@@ -714,28 +714,46 @@
                 </div>
             </div>
         </main>
-<!-- Button trigger modal -->
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded">
-                <i class="fa fa-search pe-2"></i>
-                <input type="text" class="form-control border border-0" placeholder="Search...">
+        <!-- Button trigger modal -->
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Search</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mt-3 ms-3 d-flex align-items-center border px-2 py-1 rounded">
+                        <i class="fa fa-search pe-2"></i>
+                        <input type="text" class="form-control border border-0" placeholder="Search...">
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+
+        <!-- Button trigger modal -->
+        <!-- Modal -->
+        <div class="modal fade" id="userModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel"><i class="fa fa-user me-2"></i>User Info</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center">
+                        <img class="w-100 img-fluid" src="./img/10.svg" alt="" style="height: 300px; object-fit: cover;">
+                        <div class="" style="margin-top: -35px;">
+                            <img class="border border-5 border-white rounded-circle" src="./img/Copy of Black And White Modern Vintage Retro Brand Logo.svg" alt="">
+                        </div>
+                        <h5 class="fw-bold mt-2">Ms. Yoon Me Me</h6>
+                    </div>
+                </div>
+            </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
